//update homepage backend